Bug 75484 Fixed styling on scheduler so grid aligns correctly.
http://bugzilla.zimbra.com/show_bug.cgi?id=75484

Copied from Perforce
 Change: 477688

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -2807,18 +2807,10 @@ HTML>BODY .appt-selected .appt_allday_body
 }
 
 /* "All attendees" label */
-.ZmSchedulerAllTd {
-	@SeparatorBorder@
-	@NoWrap@
-	@Text-disabled@
-	font-weight:bold;
-	text-align:center;
-	@InactiveCursor@
-}
-
-/* "All attendees" label */
 .ZmSchedulerAllLabel {
+	@FreeBusyViewGridHeight@
 	@NoWrap@
+	@SeparatorBorder@
 	@Text-disabled@
 	font-weight:bold;
 	text-align:center;
